--- a/style.css
+++ b/style.css
@@ -19,19 +19,26 @@ header{
 
 header>span{
     color: white;
-    font-size: 13px;
+    font-size: 15px;
     font-family: 'Roboto', sans-serif;
     background-color: #4a4a4aaa;
     position: absolute;
     top: 5%;
-    right: 2%;
+    right: 2.5%;
     padding: 3px 6px;
     border-radius: 7px;
 }
 
 #squares{
     display: inline-block;
-    font-size: 3px;
+    font-size: 15px;
+}
+
+header>#x-arrow{
+    display: inline-block;
+    font-size: 15px; 
+    top: 5%;
+    right: 6px;
 }
 
 /*#endregion header*/
@@ -40,11 +47,10 @@ header>span{
 /*#startregion main*/
 main{
     background-color:#000000;
-    max-height: calc(100vh -8rem);
 }
 
 main>.conteiner{
-    height: 1500px;
+    height: calc(100vh - 4rem);
     overflow: auto;
     width: 80%;
     margin: auto;
@@ -53,7 +59,7 @@ main>.conteiner{
 
 .conteiner>.row{
     display: flex;
-    height: 10%;
+    height: 150px;
 }
 
 .row>.col{
@@ -97,7 +103,7 @@ footer>.col1{
 footer>.col2{
     width: 77%;
     color: white;
-    padding: 8px 10px;
+    padding: 12px 10px;
 }
 
 footer>.col3{
@@ -121,7 +127,7 @@ footer>.col3{
 }
 
 .col2>.cont2{
-    width: 50%;
+    width: 60%;
     margin: auto;
     display: flex;
 }
@@ -136,11 +142,11 @@ footer>.col3{
 
 .text_icon{
     text-align: center;
-    font-size: x-small;
+    font-size: small;
 }
 
 .icon{
-    font-size: x-large;
+    font-size: large;
 }
 
 .col1>.arrow{
